# ogloji

./: .gitignore  Dockerfile  main.py  pyproject.toml  tests.py
.github/workflows/: ci.yml  release.yml
src/og_loji.egg-info/: PKG-INFO  SOURCES.txt
src/ogloji/: __init__.py
tests/: test_e2e.py
